--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,6 @@
-/******SCSS Variables******/
+/******
+SCSS VARIABLES
+******/
 
 /*Colors*/
 $primary-color: #33AD5C;
@@ -10,7 +12,9 @@ $sel-bg-color: red;
 /*Dimensions*/
 
 
-/******General******/
+/******
+GENERAL
+******/
 
 /*Fonts*/
 .flat {
@@ -66,7 +70,9 @@ footer {
   font-size: 30px;
 }
 
-/*******Pitch Pipe******/
+/******
+PITCH PIPE
+******/
 
 /*Sizing Classes*/
 .container {
@@ -141,7 +147,6 @@ footer {
   width: 50%;
   background-color: white;
   border-radius: 50%;
-  z-index: 1;
 }
 #output {
   position: absolute;
@@ -149,7 +154,6 @@ footer {
   margin-top: -5%;
   height: 100%;
   width: 100%;
-  z-index: 1;
   text-align: center;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
@@ -167,13 +171,15 @@ footer {
   padding: 1px;
 
 }
-/******Responsive Sizes******/
+/******
+RESPONSIVE SIZES
+******/
 
 /*****
 PHONES
 *****/
 
-/*iPhone 3 and 4*/
+/*iPhone 3 and 4 Portrait*/
 @media
 screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait) {
   header {
@@ -194,7 +200,7 @@ screen and (min-width: 320px) and (max-width: 568px) and (orientation: portrait)
     margin-bottom: -6px;
   }
 }
-
+/*iPhone 3 and 4 Landscape*/
 @media
 screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape),
 screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5),
@@ -202,14 +208,14 @@ screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape
   header {
     width: 20%;
     float: left;
-    margin-top: 8%;
+    margin-top: 10%;
     margin-left: 15%;
     font-size: 20px;
   }
   #pitch-pipe {
     float: right;
     margin-top: 10%;
-    margin-right: 25%;
+    margin-right: 20%;
     height: 170px;
     width: 170px;
   }
@@ -217,7 +223,7 @@ screen and (min-width: 320px) and (max-width: 568px) and (orientation: landscape
     font-size: 38px;
   }
   footer {
-    font-size: 12px;
+    font-size: 16px;
   }
 }
 
@@ -255,8 +261,8 @@ screen and (min-width: 569px) and (max-width: 767px) and (orientation: landscape
     width: 20%;
     float: left;
     margin-top: 8%;
-    margin-left: 15%;
-    font-size: 24px;
+    margin-left: 13%;
+    font-size: 28px;
     text-align: left;
   }
   #pitch-pipe {
@@ -288,12 +294,12 @@ screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait
     margin-top: -50px;
   }
   #pitch-pipe {
-    width: 560px;
-    height: 560px;
+    width: 460px;
+    height: 460px;
     margin-top: 80px;
   }
   #output {
-    font-size: 124px;
+    font-size: 104px;
   }
   footer {
   }
@@ -307,8 +313,8 @@ screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscap
     width: 20%;
     float: left;
     margin-top: 8%;
-    margin-left: 15%;
-    font-size: 36px;
+    margin-left: 9%;
+    font-size: 40px;
     text-align: left;
   }
   #pitch-pipe {
@@ -335,6 +341,29 @@ DESKTOP
 screen and (min-width: 1025px),
 screen and (min-width: 1025px) and (-webkit-min-device-pixel-ratio: 1.5),
 screen and (min-width: 1025px) and (min-device-pixel-ratio: 1.5)  {
+  header {
+    font-size: 48px;
+    margin-top: -50px;
+  }
+  #pitch-pipe {
+    width: 460px;
+    height: 460px;
+    margin-top: 80px;
+
+  }
+  #output {
+    font-size: 104px;
+
+  }
+  footer {
+
+  }
+}
+/*Desktop Large*/
+@media
+screen and (min-width: 1281px),
+screen and (min-width: 1281px) and (-webkit-min-device-pixel-ratio: 1.5),
+screen and (min-width: 1281px) and (min-device-pixel-ratio: 1.5)  {
   header {
     font-size: 48px;
     margin-top: -50px;
