Add slight scss changes

--- a/css/styletest.scss
+++ b/css/styletest.scss
@@ -57,8 +57,8 @@ header {
   line-height: 1;
   position: absolute;
   margin-top: 0px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 50%;
+  margin-right: 50%;
   font-size: 124px;
   text-align: center;
   text-shadow: 4px 4px $primary-color;
