--- a/css/styletest.css
+++ b/css/styletest.css
@@ -11,8 +11,10 @@ GENERAL
 
 body {
   background: #bdbdbd;
+  background-image: url(/img/spree_50.png);
   color: #33ad5c;
   font-family: "Oleo Script", sans-serif;
+  margin: 0;
 }
 
 /*=================
@@ -33,7 +35,7 @@ LAYOUT
 .inner {
   margin-left: auto;
   margin-right: auto;
-  width: 75%;
+  width: 70%;
 }
 
 /*=================
@@ -46,22 +48,22 @@ header {
   color: #3d3d3d;
   line-height: 1;
   position: absolute;
-  margin-top: 0px;
-  margin-left: 50%;
-  margin-right: 50%;
+  margin-top: -600px;
+  margin-left: 30%;
   font-size: 124px;
   text-align: center;
   text-shadow: 4px 4px #33ad5c;
+  width: 40%;
 }
 
 /*Main*/
 #pitch-pipe {
-  height: 400px;
+  height: 150px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0%;
+  margin-top: 1.3%;
   position: relative;
-  width: 400px;
+  width: 150px;
 }
 
 /*SVG*/
@@ -93,8 +95,8 @@ header {
 /*Selector*/
 #selector {
   height: 123.67%;
-  margin-top: -111.8%;
-  margin-left: -11.85%;
+  margin-top: -112.5%;
+  margin-left: -12.5%;
   position: relative;
   width: 123.67%;
 }
@@ -105,7 +107,7 @@ header {
   border-radius: 50%;
   height: 50%;
   margin-left: 25%;
-  margin-top: -86.8%;
+  margin-top: -86.85%;
   position: absolute;
   width: 50%;
 }
@@ -113,7 +115,7 @@ header {
 #output {
   color: #33ad5c;
   font-family: "Oswald", sans-serif;
-  font-size: 88px;
+  font-size: 30px;
   font-weight: 700;
   height: 100%;
   line-height: 0;
