--- a/css/styletest.scss
+++ b/css/styletest.scss
@@ -17,8 +17,10 @@ GENERAL
 
 body {
   background: $background-color;
+  background-image: url(/img/spree_50.png);
   color: $primary-color;
   font-family: "Oleo Script", sans-serif;
+  margin: 0;
 }
 
 /*=================
@@ -40,7 +42,7 @@ LAYOUT
 .inner {
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 70%;
 }
 
 
@@ -56,22 +58,22 @@ header {
   color: $secondary-color;
   line-height: 1;
   position: absolute;
-  margin-top: 0px;
-  margin-left: 50%;
-  margin-right: 50%;
+  margin-top: -600px;
+  margin-left: 30%;
   font-size: 124px;
   text-align: center;
   text-shadow: 4px 4px $primary-color;
+  width: 40%;
 }
 
 /*Main*/
 #pitch-pipe {
-  height: 400px;
+  height: 150px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0%;
+  margin-top: 1.3%;
   position: relative;
-  width: 400px;
+  width: 150px;
 }
 
 /*SVG*/
@@ -103,8 +105,8 @@ header {
 /*Selector*/
 #selector {
   height: 123.67%;
-  margin-top: -111.8%;
-  margin-left: -11.85%;
+  margin-top: -112.5%;
+  margin-left: -12.5%;
   position: relative;
   width: 123.67%;
 }
@@ -115,14 +117,14 @@ header {
   border-radius: 50%;
   height: 50%;
   margin-left: 25%;
-  margin-top: -86.8%;
+  margin-top: -86.85%;
   position: absolute;
   width: 50%;
 }
 #output {
   color: $primary-color;
   font-family: "Oswald", sans-serif;
-  font-size: 88px;
+  font-size: 30px;
   font-weight: 700;
   height: 100%;
   line-height: 0;
@@ -132,7 +134,6 @@ header {
   text-align: center;
   width: 100%;
 }
-
 #output b {
   font-size: 0.5em;
 }
