--- a/css/styletest.scss
+++ b/css/styletest.scss
@@ -14,13 +14,13 @@ GENERAL
   background-color: $sel-bg-color;
   color: $sel-color;
 }
-
 body {
   background: $background-color;
   background-image: url(/img/spree_50.png);
   color: $primary-color;
   font-family: "Oleo Script", sans-serif;
   margin: 0;
+  width: auto;
 }
 
 /*=================
@@ -33,26 +33,21 @@ LAYOUT
     position: absolute;
     width: 100%;
 }
-
 .middle {
     display: table-cell;
     vertical-align: middle;
 }
-
 .inner {
     margin-left: auto;
     margin-right: auto;
     width: 70%;
 }
 
-
 /*=================
 GENERAL
 =================*/
 
-/*
-Pitch Pipe
-*/
+/*Pitch Pipe*/
 
 header {
   color: $secondary-color;
