--- a/css/styletest.css
+++ b/css/styletest.css
@@ -4,9 +4,8 @@ SCSS VARIABLES
 /*=================
 GENERAL
 =================*/
-::selection {
-  background-color: red;
-  color: black;
+html {
+  margin: 0 auto;
 }
 
 body {
@@ -15,6 +14,11 @@ body {
   font-family: "Oleo Script", sans-serif;
   margin: 0;
   width: auto;
+}
+
+::selection {
+  background-color: red;
+  color: black;
 }
 
 /*=================
