--- a/css/styletest.css
+++ b/css/styletest.css
@@ -7,6 +7,7 @@ GENERAL
 html {
   width: 100%;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 body {
@@ -14,6 +15,7 @@ body {
   color: #33ad5c;
   font-family: "Oleo Script", sans-serif;
   margin: 0;
+  overflow-x: hidden;
   width: auto;
 }
 
