--- a/css/styletest.scss
+++ b/css/styletest.scss
@@ -13,12 +13,14 @@ GENERAL
 html {
   width: 100%;
   margin:0 auto;
+  overflow-x: hidden;
 }
 body {
   background: $background-color;
   color: $primary-color;
   font-family: "Oleo Script", sans-serif;
   margin: 0;
+  overflow-x: hidden;
   width: auto;
 }
 ::selection {
