--- a/css/styletest.scss
+++ b/css/styletest.scss
@@ -10,18 +10,17 @@ $sel-bg-color: red;
 /*=================
 GENERAL
 =================*/
+
 html {
   width: 100%;
-  margin:0 auto;
-  overflow-x: hidden;
+  margin: 0;
 }
 body {
   background: $background-color;
   color: $primary-color;
   font-family: "Oleo Script", sans-serif;
   margin: 0;
-  overflow-x: hidden;
-  width: auto;
+  width: 100%;
 }
 ::selection {
   background-color: $sel-bg-color;
@@ -58,9 +57,9 @@ header {
   color: $secondary-color;
   line-height: 1;
   position: absolute;
-  margin-top: -600px;
-  margin-left: 30%;
-  font-size: 124px;
+  margin-top: -150px;
+  margin-left: 15%;
+  font-size: 56px;
   text-align: center;
   text-shadow: 4px 4px $primary-color;
   width: 40%;
@@ -145,6 +144,8 @@ RESPONSIVE SIZES
 @media screen and (orientation: landscape) {
   header {
     float: left;
+    margin-left: 0;
+    margin-top: 5%;
   }
   #pitch-pipe {
     float: right;
