--- a/css/styletest.css
+++ b/css/styletest.css
@@ -49,14 +49,13 @@ GENERAL
 /*Pitch Pipe*/
 header {
   color: #3d3d3d;
-  line-height: 1;
-  position: absolute;
-  margin-top: -150px;
-  margin-left: 15%;
+  line-height: 0.8;
   font-size: 56px;
+  margin-right: 0;
+  margin-bottom: 48px;
+  position: relative;
   text-align: center;
   text-shadow: 4px 4px #33ad5c;
-  width: 40%;
 }
 
 /*Main*/
