--- a/css/styletest.scss
+++ b/css/styletest.scss
@@ -142,13 +142,39 @@ header {
 RESPONSIVE SIZES
 =================*/
 
+/*Set landscape*/
+
 @media screen and (orientation: landscape) {
   header {
     float: left;
-    margin-left: 0;
+    margin-left: 0px;
     margin-top: 5%;
   }
   #pitch-pipe {
     float: right;
+  }
+}
+
+/*Small Tablet Portrait*/
+@media screen and (min-width: 481px) and (orientation: portrait) {
+  header {
+    font-size: 68px;
+  }
+  #pitch-pipe {
+    height: 240px;
+    width: 240px;
+  }
+  #output {
+    font-size: 52px;
+  }
+}
+
+@media screen and (min-width: 481px) and (orientation: landscape) {
+  #pitch-pipe {
+    height: 210px;
+    width: 210px;
+  }
+  #output {
+    font-size: 46px;
   }
 }
