--- a/css/styletest.css
+++ b/css/styletest.css
@@ -150,7 +150,7 @@ RESPONSIVE SIZES
   }
 }
 /*Small Tablet Portrait*/
-@media screen and (min-width: 481px) and (orientation: portrait) {
+@media screen and (min-width: 480px) and (orientation: portrait) {
   header {
     font-size: 68px;
   }
@@ -164,7 +164,7 @@ RESPONSIVE SIZES
     font-size: 52px;
   }
 }
-@media screen and (min-width: 481px) and (orientation: landscape) {
+@media screen and (min-width: 640px) and (orientation: landscape) {
   #pitch-pipe {
     height: 210px;
     width: 210px;
@@ -172,5 +172,35 @@ RESPONSIVE SIZES
 
   #output {
     font-size: 46px;
+  }
+}
+/*Tablet Portrait*/
+@media screen and (min-width: 640px) and (orientation: portrait) {
+  header {
+    font-size: 80px;
+    margin-bottom: 72px;
+  }
+
+  #pitch-pipe {
+    height: 360px;
+    width: 360px;
+  }
+
+  #output {
+    font-size: 78px;
+  }
+}
+@media screen and (min-width: 1024px) and (orientation: landscape) {
+  header {
+    font-size: 80px;
+  }
+
+  #pitch-pipe {
+    height: 320px;
+    width: 320px;
+  }
+
+  #output {
+    font-size: 72px;
   }
 }
