--- a/css/style.scss
+++ b/css/style.scss
@@ -66,6 +66,10 @@ header {
   text-shadow: 4px 4px $primary-color;
 }
 
+header b {
+  font-size: 30%;
+}
+
 /*Main*/
 #pitch-pipe {
   height: 150px;
