--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,12 @@ header b {
 
 .flat {
   font-size: 22px;
+  font-family: Arial, Verdana, sans-serif;
 }
 
 .sharp {
-  font-size: 20px;
+  font-size: 24px;
+  font-family: Arial, Verdana, sans-serif;
 }
 
 /*Selector*/
@@ -136,6 +138,7 @@ header b {
 
 #output b {
   font-size: 0.5em;
+  font-family: Arial, Verdana, sans-serif;
 }
 
 /*=================
