--- a/css/style.scss
+++ b/css/style.scss
@@ -100,10 +100,12 @@ header b {
 
 .flat {
   font-size: 22px;
+  font-family: Arial, Verdana, sans-serif;
 }
 
 .sharp {
-  font-size: 20px;
+  font-size: 24px;
+  font-family: Arial, Verdana, sans-serif;
 }
 
 /*Selector*/
@@ -140,6 +142,7 @@ header b {
 }
 #output b {
   font-size: 0.5em;
+  font-family: Arial, Verdana, sans-serif;
 }
 
 /*=================
