--- a/css/style.scss
+++ b/css/style.scss
@@ -100,7 +100,7 @@ header b {
 
 .flat {
   font-size: 22px;
-  font-family: Arial, Verdana, sans-serif;
+  font-family: Helvetica, Verdana, sans-serif;
 }
 
 .sharp {
@@ -142,7 +142,7 @@ header b {
 }
 #output b {
   font-size: 0.5em;
-  font-family: Arial, Verdana, sans-serif;
+  font-family: Tahoma, Verdana, sans-serif;
 }
 
 /*=================
