--- a/css/style.scss
+++ b/css/style.scss
@@ -58,7 +58,7 @@ GENERAL
 header {
   color: $secondary-color;
   line-height: 0.8;
-  font-size: 56px;
+  font-size: 42px;
   margin-right: 0;
   margin-bottom: 48px;
   position: relative;
@@ -165,7 +165,7 @@ RESPONSIVE SIZES
 /*Small Tablet Portrait*/
 @media screen and (min-width: 480px) and (orientation: portrait) {
   header {
-    font-size: 68px;
+    font-size: 60px;
   }
   #pitch-pipe {
     height: 240px;
@@ -177,6 +177,9 @@ RESPONSIVE SIZES
 }
 
 @media screen and (min-width: 640px) and (orientation: landscape) {
+  header {
+    font-size: 60px;
+  }
   #pitch-pipe {
     height: 210px;
     width: 210px;
