--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ RESPONSIVE SIZES
 }
 @media screen and (min-width: 640px) and (orientation: landscape) {
   header {
-    font-size: 60px;
+    font-size: 60epx;
   }
 
   #pitch-pipe {
