--- a/css/style.scss
+++ b/css/style.scss
@@ -178,7 +178,7 @@ RESPONSIVE SIZES
 
 @media screen and (min-width: 640px) and (orientation: landscape) {
   header {
-    font-size: 60px;
+    font-size: 60epx;
   }
   #pitch-pipe {
     height: 210px;
