--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ body {
 
 ::selection {
   background-color: red;
-  color: black;
 }
 
 /*=================
@@ -66,12 +65,12 @@ header b {
 
 /*Main*/
 #pitch-pipe {
-  height: 150px;
+  height: 162px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1.3%;
+  margin-top: 1.2%;
   position: relative;
-  width: 150px;
+  width: 162px;
 }
 
 /*SVG*/
@@ -105,8 +104,8 @@ header b {
 /*Selector*/
 #selector {
   height: 123.67%;
-  margin-top: -111.5%;
-  margin-left: -12%;
+  margin-top: -111.87%;
+  margin-left: -11.81%;
   position: relative;
   width: 123.67%;
 }
@@ -116,8 +115,8 @@ header b {
   background-color: white;
   border-radius: 50%;
   height: 50%;
-  margin-left: 25%;
-  margin-top: -86.85%;
+  margin-left: 25.2%;
+  margin-top: -87.2%;
   position: absolute;
   width: 50%;
 }
@@ -125,7 +124,7 @@ header b {
 #output {
   color: #33ad5c;
   font-family: "Oswald", sans-serif;
-  font-size: 30px;
+  font-size: 36px;
   font-weight: 700;
   height: 100%;
   line-height: 0;
@@ -139,6 +138,134 @@ header b {
 #output b {
   font-size: 0.5em;
   font-family: Arial, Verdana, sans-serif;
+}
+
+#output-circle:hover {
+  background-color: #33ad5c;
+  -webkit-transition: 0.5s;
+  /* For Safari 3.1 to 6.0 */
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+#output:hover {
+  color: white;
+  -webkit-transition: 0.5s;
+  /* For Safari 3.1 to 6.0 */
+  transition: 0.2s;
+}
+
+.button {
+  -moz-animation-name: glow;
+  -moz-animation-duration: 2s;
+  -moz-animation-iteration-count: infinite;
+  -webkit-animation-name: glow;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+  animation-name: glow;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+#output.active {
+  -moz-animation-name: vanish;
+  -moz-animation-duration: 2s;
+  -moz-animation-iteration-count: 1;
+  -webkit-animation-name: vanish;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-iteration-count: 1;
+  animation-name: vanish;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+}
+
+/*=================
+CSS3 ANIMATIONS
+=================*/
+/*Glow Effect*/
+@-moz-keyframes glow {
+  0% {
+    box-shadow: 0 0 0px;
+  }
+
+  50% {
+    box-shadow: 0 0 20px #33ad5c;
+  }
+
+  100% {
+    box-shadow: 0 0 0px;
+  }
+}
+
+@-webkit-keyframes glow {
+  0% {
+    box-shadow: 0 0 0px;
+  }
+
+  50% {
+    box-shadow: 0 0 20px #33ad5c;
+  }
+
+  100% {
+    box-shadow: 0 0 0px;
+  }
+}
+
+@keyframes glow {
+  0% {
+    box-shadow: 0 0 0px;
+  }
+
+  50% {
+    box-shadow: 0 0 20px #33ad5c;
+  }
+
+  100% {
+    box-shadow: 0 0 0px;
+  }
+}
+
+/*Active Output Effect*/
+@-moz-keyframes vanish {
+  0% {
+    background-color: #3d3d3d;
+  }
+
+  50% {
+    background-color: #3d3d3d;
+  }
+
+  100% {
+    background-color: white;
+  }
+}
+
+@-webkit-keyframes vanish {
+  0% {
+    background-color: #3d3d3d;
+  }
+
+  50% {
+    background-color: #3d3d3d;
+  }
+
+  100% {
+    background-color: white;
+  }
+}
+
+@keyframes vanish {
+  0% {
+    background-color: #3d3d3d;
+  }
+
+  50% {
+    background-color: #3d3d3d;
+  }
+
+  100% {
+    background-color: white;
+  }
 }
 
 /*=================
@@ -183,6 +310,18 @@ RESPONSIVE SIZES
 
   #output {
     font-size: 46px;
+  }
+}
+/*Set Margins for Tablet and Larger*/
+@media screen and (min-width: 640px) {
+  #selector {
+    margin-top: -111.85%;
+    margin-left: -11.81%;
+  }
+
+  #output-circle {
+    margin-left: 25%;
+    margin-top: -86.9%;
   }
 }
 /*Tablet Portrait*/
