--- a/css/style.scss
+++ b/css/style.scss
@@ -63,6 +63,14 @@ LAYOUT
 GENERAL
 =================*/
 
+/*Advertisements*/
+
+#ads {
+  margin-left: auto;
+  margin-right: auto;
+  position: fixed;
+}
+
 /*Pitch Pipe*/
 
 header {
