--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,13 @@ LAYOUT
 /*=================
 GENERAL
 =================*/
+/*Advertisements*/
+#ads {
+  margin-left: auto;
+  margin-right: auto;
+  position: fixed;
+}
+
 /*Pitch Pipe*/
 header {
   color: #4a4a4a;
