--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,7 @@ GENERAL
 =================*/
 /*Advertisements*/
 #ads {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 50%;
   position: fixed;
 }
 
