--- a/css/style.scss
+++ b/css/style.scss
@@ -66,8 +66,8 @@ GENERAL
 /*Advertisements*/
 
 #ads {
-  margin-left: 50%;
-  position: fixed;
+  //margin-left: 50%;
+  //position: fixed;
 }
 
 /*Pitch Pipe*/
