--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ footer {
   bottom: 0;
   color: white;
   font-family: "Oswald", sans-serif;
-  font-size: 13px;
+  font-size: 12px;
   height: 26px;
   padding: 0px;
   position: absolute;
@@ -199,7 +199,8 @@ footer > span, footer > form {
 }
 
 .copyright {
-  vertical-align: -1px;
+  font-size: 10px;
+  vertical-align: -3px;
 }
 
 .pp button {
@@ -211,11 +212,12 @@ footer > span, footer > form {
   color: inherit;
   display: inline-block;
   background: #4a4a4a;
-  padding: 0 20px;
+  padding: 0 5px;
   text-decoration: none;
   color: #f9f6f2;
   height: 100%;
   cursor: pointer;
+  vertical-align: middle;
 }
 
 .pp button:hover {
@@ -235,7 +237,7 @@ footer > span, footer > form {
   margin-left: 10px;
   display: inline-block;
   background: #4a4a4a;
-  padding: 0 10px;
+  padding: 0 5px;
   text-decoration: none;
   color: #fff;
   height: 100%;
@@ -255,9 +257,9 @@ footer > span, footer > form {
 }
 
 .btc a {
-  color: #f9f6f2;
+  color: #fff;
   text-decoration: none;
-  vertical-align: middle;
+  vertical-align: -4px;
 }
 
 .btc .address {
@@ -286,7 +288,7 @@ footer > span, footer > form {
 
 .btc:hover .address, .btc .address:hover .address, .address:hover {
   opacity: 1;
-  top: -28px;
+  top: -30px;
   pointer-events: auto;
 }
 
