--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ SCSS VARIABLES
 GENERAL
 =================*/
 html {
+  height: 100%;
   width: 100%;
   margin: 0;
 }
@@ -16,6 +17,8 @@ body {
   color: #33ad5c;
   font-family: "Oleo Script", sans-serif;
   margin: 0;
+  min-height: 100%;
+  overflow: hidden;
   width: 100%;
 }
 
@@ -259,14 +262,14 @@ footer > span, footer > form {
 .btc a {
   color: #fff;
   text-decoration: none;
-  vertical-align: -4px;
+  vertical-align: -5px;
 }
 
 .btc .address {
   cursor: auto;
   position: absolute;
   width: 340px;
-  right: 110%;
+  right: 127%;
   margin-right: -170px;
   padding-bottom: 7px;
   top: -30px;
@@ -288,7 +291,7 @@ footer > span, footer > form {
 
 .btc:hover .address, .btc .address:hover .address, .address:hover {
   opacity: 1;
-  top: -30px;
+  top: -26px;
   pointer-events: auto;
 }
 
