--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ SCSS VARIABLES
 GENERAL
 =================*/
 html {
+  height: 100%;
   width: 100%;
   margin: 0;
 }
@@ -15,8 +16,8 @@ body {
   background-repeat: repeat;
   color: #33ad5c;
   font-family: "Oleo Script", sans-serif;
+  height: 100%;
   margin: 0;
-  padding: 0;
   width: 100%;
 }
 
