--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,7 @@ GENERAL
 =================*/
 
 html {
+  height: 100%;
   width: 100%;
   margin: 0;
 }
@@ -22,8 +23,8 @@ body {
   background-repeat: repeat;
   color: $primary-color;
   font-family: "Oleo Script", sans-serif;
+  height: 100%;
   margin: 0;
-  padding: 0;
   width: 100%;
 }
 ::selection {
