--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ SCSS VARIABLES
 /*=================
 GENERAL
 =================*/
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   height: 100%;
   width: 100%;
