--- a/css/style.scss
+++ b/css/style.scss
@@ -11,7 +11,10 @@ $glow-end-shadow: 30px;
 /*=================
 GENERAL
 =================*/
-
+* {
+  margin:0;
+  padding:0;
+}
 html {
   height: 100%;
   width: 100%;
