--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ html {
   height: 100%;
   width: 100%;
   margin: 0;
+  overflow: hidden;
 }
 
 body {
@@ -18,6 +19,7 @@ body {
   font-family: "Oleo Script", sans-serif;
   height: 100%;
   margin: 0;
+  overflow: hidden;
   width: 100%;
 }
 
