--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,7 @@ html {
   height: 100%;
   width: 100%;
   margin: 0;
+  overflow: hidden;
 }
 body {
   background: $background-color;
@@ -24,6 +25,7 @@ body {
   font-family: "Oleo Script", sans-serif;
   height: 100%;
   margin: 0;
+  overflow:hidden;
   width: 100%;
 }
 ::selection {
