--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
   font-family: "Oleo Script", sans-serif;
   height: 100%;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   width: 100%;
 }
 
