--- a/css/style.scss
+++ b/css/style.scss
@@ -25,7 +25,7 @@ body {
   font-family: "Oleo Script", sans-serif;
   height: 100%;
   margin: 0;
-  overflow:hidden;
+  overflow-x:hidden;
   width: 100%;
 }
 ::selection {
