--- a/css/style.scss
+++ b/css/style.scss
@@ -25,8 +25,7 @@ body {
   font-family: "Oleo Script", sans-serif;
   height: 100%;
   margin: 0;
-  overflow-x:hidden;
-  width: 100%;
+  min-width: 320px;
 }
 ::selection {
   background-color: $sel-bg-color;
