--- a/css/style.scss
+++ b/css/style.scss
@@ -11,11 +11,12 @@ $glow-end-shadow: 30px;
 /*=================
 GENERAL
 =================*/
-html {
+html, body {
   height: 100%;
-  width: 100%;
   margin: 0;
   overflow: hidden;
+  overflow-x: hidden;
+  width: 100%;
 }
 body {
   background: $background-color;
@@ -23,9 +24,6 @@ body {
   background-repeat: repeat;
   color: $primary-color;
   font-family: "Oleo Script", sans-serif;
-  height: 100%;
-  margin: 0;
-  min-width: 320px;
 }
 ::selection {
   background-color: $sel-bg-color;
