--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@ SCSS VARIABLES
 GENERAL
 =================*/
 html, body {
-  height: auto;
+  height: 100%;
   margin: 0;
   overflow: hidden;
   overflow-x: hidden;
-  width: auto;
+  width: 100%;
 }
 
 body {
@@ -185,6 +185,7 @@ footer {
   font-family: "Oswald", sans-serif;
   font-size: 12px;
   height: 26px;
+  overflow-x: hidden;
   padding: 0px;
   position: absolute;
   text-align: center;
