--- a/css/style.scss
+++ b/css/style.scss
@@ -12,11 +12,11 @@ $glow-end-shadow: 30px;
 GENERAL
 =================*/
 html, body {
-  height: auto;
+  height: 100%;
   margin: 0;
   overflow: hidden;
   overflow-x: hidden;
-  width: auto;
+  width: 100%;
 }
 body {
   background: $background-color;
@@ -188,6 +188,7 @@ footer {
   font-family: "Oswald", sans-serif;
   font-size: 12px;
   height: 26px;
+  overflow-x:hidden;
   padding: 0px;
   position: absolute;
   text-align: center;
