overflow on footer

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ footer {
   font-family: "Oswald", sans-serif;
   font-size: 12px;
   height: 26px;
+  overflow: hidden;
   overflow-x: hidden;
   padding: 0px;
   position: absolute;
