Add fixed position to body

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ body {
   background-repeat: repeat;
   color: #33ad5c;
   font-family: "Oleo Script", sans-serif;
+  position: fixed;
+  top: 0;
+  bottom: 0;
 }
 
 ::selection {
