--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ header b {
   color: #33ad5c;
   font-family: "Oleo Script", sans-serif;
   font-size: 32px;
-  font-weight: bold;
+  font-weight: 400;
 }
 
 .flat {
