--- a/css/style.scss
+++ b/css/style.scss
@@ -109,7 +109,7 @@ header b {
   color: $primary-color;
   font-family: "Oleo Script", sans-serif;
   font-size: 32px;
-  font-weight: bold;
+  font-weight: 400;
 }
 
 .flat {
