--- a/css/style.scss
+++ b/css/style.scss
@@ -65,6 +65,11 @@ LAYOUT
 /*=================
 GENERAL
 =================*/
+#twitter {
+  margin-left: 8px;
+  margin-top: 8px;
+  position: fixed;
+}
 
 /*Pitch Pipe*/
 
